--- a/css/sass/_mixins.sass
+++ b/css/sass/_mixins.sass
@@ -111,7 +111,7 @@
 // Multiple Backgrounds
 
 @mixin multi-background($name)
-  // TODO: handle retina screens
+  background-position: center 0
 
   // giant iMac Displays
   background-image: image-url( $name + '-giant.jpg')
