Updated Paul outro for ch1.

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -481,6 +481,7 @@
     @extend .blend-bottom
 
   .outro
-    .second
+    p
       font-family: $caslon-bold
       font-size: $font-size*1.3
+      text-align: center
