--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -378,6 +378,12 @@ section
   &.padding
     padding: 1em
 
+  p.disclaimer
+    color: $medium
+    line-height: 1.4
+    font-size: 13px
+    margin: 0 0 1.5em 0
+
   .field
     margin-bottom: 2em
 
@@ -410,7 +416,6 @@ section
     strong
       font-family: $proxima-bold
       font-weight: normal
-
 
 input[type=radio]
   -webkit-appearance: none
