--- a/css/style.css
+++ b/css/style.css
@@ -484,7 +484,7 @@ section {
 
 /* line 372, sass/_base.sass */
 .form_fields {
-  background: url('../img/form-background.jpg?1370990272') center bottom repeat-x;
+  background: url('../img/form-background.jpg?1371011934') center bottom repeat-x;
   font-family: "Proxima N W01 Smbd";
   margin: 0 auto;
   overflow: hidden; }
@@ -492,39 +492,45 @@ section {
   .form_fields.padding, .chapter-1-rethinking-retirement article .age_and_retirement .form_fields, .chapter-3-working-for-the-nest-egg article .calculator .form_fields {
     padding: 1em; }
   /* line 381, sass/_base.sass */
+  .form_fields p.disclaimer {
+    color: #666666;
+    line-height: 1.4;
+    font-size: 13px;
+    margin: 0 0 1.5em 0; }
+  /* line 387, sass/_base.sass */
   .form_fields .field {
     margin-bottom: 2em; }
-    /* line 385, sass/_base.sass */
+    /* line 391, sass/_base.sass */
     .form_fields .field.radio_buttons label {
       margin: 0.25em 0; }
-      /* line 388, sass/_base.sass */
+      /* line 394, sass/_base.sass */
       .form_fields .field.radio_buttons label span {
         margin-left: 0.25em; }
-  /* line 391, sass/_base.sass */
+  /* line 397, sass/_base.sass */
   .form_fields .field_title {
     font-size: 22px;
     line-height: 1.4;
     margin: 0 0 0.25em 0;
     padding: 0;
     text-transform: uppercase; }
-    /* line 398, sass/_base.sass */
+    /* line 404, sass/_base.sass */
     .form_fields .field_title strong {
       font-family: "Proxima N W01 Bold";
       font-weight: normal; }
-    /* line 402, sass/_base.sass */
+    /* line 408, sass/_base.sass */
     .form_fields .field_title span {
       display: inline-block;
       margin: 0 0.5em; }
-  /* line 406, sass/_base.sass */
+  /* line 412, sass/_base.sass */
   .form_fields label {
     display: block;
     font-size: 18px; }
-    /* line 410, sass/_base.sass */
+    /* line 416, sass/_base.sass */
     .form_fields label strong {
       font-family: "Proxima N W01 Bold";
       font-weight: normal; }
 
-/* line 415, sass/_base.sass */
+/* line 420, sass/_base.sass */
 input[type=radio] {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -534,17 +540,17 @@ input[type=radio] {
   width: 25px;
   height: 25px;
   top: 8px; }
-  /* line 425, sass/_base.sass */
+  /* line 430, sass/_base.sass */
   input[type=radio]:hover {
     background-image: url('../img/radio_button-hover.png?1370990272'); }
-  /* line 428, sass/_base.sass */
+  /* line 433, sass/_base.sass */
   input[type=radio]:checked {
     background-image: url('../img/radio_button-filled.png?1370990272'); }
 
-/* line 434, sass/_base.sass */
+/* line 439, sass/_base.sass */
 .splitbars {
   height: 180px; }
-  /* line 437, sass/_base.sass */
+  /* line 442, sass/_base.sass */
   .splitbars h3 {
     color: #548e85;
     font-family: "BodoniW01-PosterItalic";
@@ -552,19 +558,19 @@ input[type=radio] {
     float: left;
     width: 8%;
     margin: 2.8em 5% 0 0; }
-  /* line 445, sass/_base.sass */
+  /* line 450, sass/_base.sass */
   .splitbars .splitbars-container {
     float: left;
     margin: 4em 0;
     width: 87%;
     height: 80px; }
-    /* line 451, sass/_base.sass */
+    /* line 456, sass/_base.sass */
     .splitbars .splitbars-container div {
       float: left;
       display: block;
       height: 80px;
       position: relative; }
-      /* line 457, sass/_base.sass */
+      /* line 462, sass/_base.sass */
       .splitbars .splitbars-container div span {
         background: rgba(0, 0, 0, 0.4);
         color: white;
@@ -575,21 +581,21 @@ input[type=radio] {
         position: absolute;
         text-transform: uppercase;
         white-space: nowrap; }
-        /* line 468, sass/_base.sass */
+        /* line 473, sass/_base.sass */
         .splitbars .splitbars-container div span strong {
           display: none; }
-      /* line 471, sass/_base.sass */
+      /* line 476, sass/_base.sass */
       .splitbars .splitbars-container div.your_answer span strong {
         display: inline; }
-      /* line 477, sass/_base.sass */
+      /* line 482, sass/_base.sass */
       .splitbars .splitbars-container div.first span, .splitbars .splitbars-container div.third span, .splitbars .splitbars-container div.fifth span {
         left: 0;
         top: -40px; }
-      /* line 483, sass/_base.sass */
+      /* line 488, sass/_base.sass */
       .splitbars .splitbars-container div.second span, .splitbars .splitbars-container div.fourth span {
         left: 0;
         bottom: -40px; }
-      /* line 493, sass/_base.sass */
+      /* line 498, sass/_base.sass */
       .splitbars .splitbars-container div.first, .splitbars .splitbars-container div.first span {
         background-color: #777777; }
       /* line 19, sass/_mixins.sass */
@@ -608,7 +614,7 @@ input[type=radio] {
         border-right: 6px solid transparent;
         border-top: 6px solid #548e85;
         margin-bottom: -6px; }
-      /* line 501, sass/_base.sass */
+      /* line 506, sass/_base.sass */
       .splitbars .splitbars-container div.second, .splitbars .splitbars-container div.second span {
         background-color: #999999; }
       /* line 9, sass/_mixins.sass */
@@ -627,7 +633,7 @@ input[type=radio] {
         border-right: 6px solid transparent;
         border-bottom: 6px solid #548e85;
         margin-top: -6px; }
-      /* line 509, sass/_base.sass */
+      /* line 514, sass/_base.sass */
       .splitbars .splitbars-container div.third, .splitbars .splitbars-container div.third span {
         background-color: #aaaaaa; }
       /* line 19, sass/_mixins.sass */
@@ -646,7 +652,7 @@ input[type=radio] {
         border-right: 6px solid transparent;
         border-top: 6px solid #548e85;
         margin-bottom: -6px; }
-      /* line 517, sass/_base.sass */
+      /* line 522, sass/_base.sass */
       .splitbars .splitbars-container div.fourth, .splitbars .splitbars-container div.fourth span {
         background-color: #cccccc; }
       /* line 9, sass/_mixins.sass */
@@ -665,7 +671,7 @@ input[type=radio] {
         border-right: 6px solid transparent;
         border-bottom: 6px solid #548e85;
         margin-top: -6px; }
-      /* line 525, sass/_base.sass */
+      /* line 530, sass/_base.sass */
       .splitbars .splitbars-container div.fifth, .splitbars .splitbars-container div.fifth span {
         background-color: #eeeeee; }
       /* line 19, sass/_mixins.sass */
@@ -684,66 +690,66 @@ input[type=radio] {
         border-right: 6px solid transparent;
         border-top: 6px solid #548e85;
         margin-bottom: -6px; }
-      /* line 533, sass/_base.sass */
+      /* line 538, sass/_base.sass */
       .splitbars .splitbars-container div.your_answer, .splitbars .splitbars-container div.your_answer span {
         background-color: #548e85; }
 
 @-webkit-keyframes pulse-highlight {
-  /* line 541, sass/_base.sass */
+  /* line 546, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 544, sass/_base.sass */
+  /* line 549, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 547, sass/_base.sass */
+  /* line 552, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @-moz-keyframes pulse-highlight {
-  /* line 541, sass/_base.sass */
+  /* line 546, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 544, sass/_base.sass */
+  /* line 549, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 547, sass/_base.sass */
+  /* line 552, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @-o-keyframes pulse-highlight {
-  /* line 541, sass/_base.sass */
+  /* line 546, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 544, sass/_base.sass */
+  /* line 549, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 547, sass/_base.sass */
+  /* line 552, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
 @keyframes pulse-highlight {
-  /* line 541, sass/_base.sass */
+  /* line 546, sass/_base.sass */
   0% {
     opacity: 0.8; }
 
-  /* line 544, sass/_base.sass */
+  /* line 549, sass/_base.sass */
   50% {
     opacity: 1; }
 
-  /* line 547, sass/_base.sass */
+  /* line 552, sass/_base.sass */
   100% {
     opacity: 0.8; } }
 
-/* line 553, sass/_base.sass */
+/* line 558, sass/_base.sass */
 .no-csstransforms3d .percent_50 svg, .no-csstransforms3d .percent_92 svg, .no-csstransforms3d .percent_68 svg, .no-csstransforms3d .percent_59 svg, .no-csstransforms3d .percent_57 svg, .no-inlinesvg .percent_50 svg, .no-inlinesvg .percent_92 svg, .no-inlinesvg .percent_68 svg, .no-inlinesvg .percent_59 svg, .no-inlinesvg .percent_57 svg {
   display: none; }
-/* line 555, sass/_base.sass */
+/* line 560, sass/_base.sass */
 .no-csstransforms3d .percent_50 img, .no-csstransforms3d .percent_92 img, .no-csstransforms3d .percent_68 img, .no-csstransforms3d .percent_59 img, .no-csstransforms3d .percent_57 img, .no-inlinesvg .percent_50 img, .no-inlinesvg .percent_92 img, .no-inlinesvg .percent_68 img, .no-inlinesvg .percent_59 img, .no-inlinesvg .percent_57 img {
   display: block !important; }
 
@@ -3103,7 +3109,7 @@ footer {
 .chapter-5-moving-forward article .ask_details {
   overflow: hidden;
   *zoom: 1;
-  background: url('../img/form-background.jpg?1370990272') center bottom repeat-x; }
+  background: url('../img/form-background.jpg?1371011934') center bottom repeat-x; }
 /* line 32, sass/_chapter5.sass */
 .chapter-5-moving-forward article .share_options ul {
   margin: 0;
