--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -286,17 +286,20 @@ section
           line-height: 1.4
           margin: .75em 0
 
-    .video-container,
-    .replay
+    .video-container
       width: 500px
       height: 280px
       display: block
+      z-index: 9
 
     .replay
+      display: block
       position: absolute
       z-index: 10
       background-repeat: no-repeat
       background-position: center
+      width: 500px
+      height: 260px
 
     &.playing .replay
       display: none
