--- a/css/sass/_chapter3.sass
+++ b/css/sass/_chapter3.sass
@@ -467,7 +467,8 @@
   .brutal_job_search
     @extend .right
 
-    h2
+    .caption h2
+      margin-top: 0
       padding-top: 0
 
   .why_is_it_harder
