Live data charts finished.

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -690,9 +690,19 @@ input[type=radio]
     &.teal
       background: #0c343d
     &.blue
-      background: #1c4587
+      background: #073763
     &.yellow
       background: #7f6000
+
+  .live_pie-loading
+    position: absolute
+    top: 50%
+    left: 50%
+    margin-left: -32px
+    background: image-url('loading.gif') center no-repeat
+    width: 64px
+    height: 64px
+    z-index: 1
 
   iframe.pie_container
     display: block
