Added Sloan foundation logo to footer.

--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -73,11 +73,19 @@ footer
         a
           text-decoration: none
 
-        img
+        a.pbs img
           margin-right: .5em
           vertical-align: -6px
           width: 224px
           height: 32px
+
+        a.sloan
+          margin-left: 2em
+
+          img
+            height: 32px
+            width: 137px
+            vertical-align: -6px
 
       &.extra
         float: right
