CDN image URLs.

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -227,7 +227,7 @@ section
 
     &.paul
       .contents
-        background-image: image-url('person-paul_solman.jpg')
+        background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-paul_solman.jpg')
         background-repeat: no-repeat
         background-position: 0 8em
 
@@ -237,37 +237,37 @@ section
         @include triangle-left(25px, $green, 10%)
 
     &.dante_chinni .contents
-      background-image: image-url('person-dante_chinni.jpg')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-dante_chinni.jpg')
 
     &.jack_vanderhei .contents
-      background-image: image-url('person-jack_vanderhei.png')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-jack_vanderhei.png')
 
     &.julie_zissimopoulos .contents
-      background-image: image-url('person-julie_zissimopoulos.jpg')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-julie_zissimopoulos.jpg')
 
     &.marc_freedman .contents
-      background-image: image-url('person-marc_freedman.jpg')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-marc_freedman.jpg')
 
     &.michael_davidson .contents
-      background-image: image-url('person-michael_davidson.png')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-michael_davidson.png')
 
     &.diane_oakley .contents
-      background-image: image-url('person-diane_oakley.jpg')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-diane_oakley.jpg')
 
     &.nancy_goldberg .contents
-      background-image: image-url('person-nancy_goldberg.jpg')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-nancy_goldberg.jpg')
 
     &.paula_gjerstad .contents
-      background-image: image-url('person-paula_gjerstad.png')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-paula_gjerstad.png')
 
     &.robert_martin .contents
-      background-image: image-url('person-robert_martin.jpg')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-robert_martin.jpg')
 
     &.sheryl_garrett .contents
-      background-image: image-url('person-sheryl_garrett.jpg')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-sheryl_garrett.jpg')
 
     &.traer_sunley .contents
-      background-image: image-url('person-traer_sunley.png')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/person-traer_sunley.png')
 
   &.video
     .contents
@@ -328,7 +328,7 @@ section
         margin-left: 2em
       .play
         right: 0
-        background-image: image-url("play-small.png")
+        background-image: image-url("http://www-tc.pbs.org/newshour/new-older-workers/img/play-small.png")
 
     &.left
       .video-container
@@ -336,7 +336,7 @@ section
         margin-right: 2em
       .play
         left: 0
-        background-image: image-url("play-small.png")
+        background-image: image-url("http://www-tc.pbs.org/newshour/new-older-workers/img/play-small.png")
 
     &.full
       .video-container,
@@ -347,7 +347,7 @@ section
       
       .play
         background-color: rgba(black, .5)
-        background-image: image-url("play-large.png")
+        background-image: image-url("http://www-tc.pbs.org/newshour/new-older-workers/img/play-large.png")
         background-position: center
 
         &:after
@@ -398,7 +398,7 @@ section
   width: 105%
 
 .form_fields
-  background: image-url('form-background.jpg') center bottom  repeat-x
+  background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/form-background.jpg') center bottom  repeat-x
   font-family: $proxima-semibold
   margin: 0 auto
   overflow: hidden
@@ -446,7 +446,7 @@ section
       font-weight: normal
 
   .live_pie-open
-    background: $green image-url('pie.png') 5px center no-repeat
+    background: $green image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/pie.png') 5px center no-repeat
     border-radius: 3px
     color: white
     cursor: pointer
@@ -465,17 +465,17 @@ input[type=radio]
   -webkit-appearance: none
   -moz-appearance: none
   display: inline-block
-  background-image: image-url("radio_button-open.png")
+  background-image: image-url("http://www-tc.pbs.org/newshour/new-older-workers/img/radio_button-open.png")
   background-repeat: no-repeat
   width: 25px
   height: 25px
   top: 8px
 
   &:hover
-    background-image: image-url("radio_button-hover.png")
+    background-image: image-url("http://www-tc.pbs.org/newshour/new-older-workers/img/radio_button-hover.png")
 
   &:checked
-    background-image: image-url("radio_button-filled.png")
+    background-image: image-url("http://www-tc.pbs.org/newshour/new-older-workers/img/radio_button-filled.png")
 
 
 // Charts
@@ -699,7 +699,7 @@ input[type=radio]
     top: 50%
     left: 50%
     margin-left: -32px
-    background: image-url('loading.gif') center no-repeat
+    background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/loading.gif') center no-repeat
     width: 64px
     height: 64px
     z-index: 1
