--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -61,7 +61,7 @@
       @include transform(rotate(0deg))
 
   .percentage_of_workers-chart
-    background: image-url('1/percentage_of_workers-chart.gif') left top no-repeat
+    background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/1/percentage_of_workers-chart.gif') left top no-repeat
     background-size: auto
     margin: 5em 0 2em -40px
     width: 860px
@@ -386,7 +386,7 @@
         margin-left: 120px
 
     .labor_force-chart
-      background: image-url('1/labor_force-chart.gif') left top no-repeat
+      background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/1/labor_force-chart.gif') left top no-repeat
       margin: 6.25em 0 0 -42px
       width: 882px
       height: 347px
@@ -408,22 +408,22 @@
           width: 341px
 
         &#labor_force-chart-data_point-1
-          background-image: image-url('1/labor_force-chart-line-1.png')
+          background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/1/labor_force-chart-line-1.png')
           top: 56px
           @include transition-delay(.2s)
 
         &#labor_force-chart-data_point-2
-          background-image: image-url('1/labor_force-chart-line-2.png')
+          background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/1/labor_force-chart-line-2.png')
           top: 185px
           @include transition-delay(.3s)
 
         &#labor_force-chart-data_point-3
-          background-image: image-url('1/labor_force-chart-line-3.png')
+          background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/1/labor_force-chart-line-3.png')
           top: 230px
           @include transition-delay(.4s)
 
         &#labor_force-chart-data_point-4
-          background-image: image-url('1/labor_force-chart-line-4.png')
+          background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/1/labor_force-chart-line-4.png')
           top: 272px
           @include transition-delay(.5s)
 
