--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -106,7 +106,7 @@
             text-transform: uppercase
 
   .gender_split
-    background: transparent image-url('line-background.png') center top repeat-y
+    background: transparent image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/line-background.png') center top repeat-y
     margin: 0 auto
     padding: 10em 0 3em 0
     width: $desktop
@@ -220,7 +220,7 @@
 
           &:after
             content: ""
-            background-image: image-url('2/community-size.png')
+            background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/2/community-size.png')
             background-repeat: no-repeat
             width: 81px
             height: 81px
