--- a/css/sass/_chapter4.sass
+++ b/css/sass/_chapter4.sass
@@ -92,7 +92,7 @@
     margin: 4em 0
 
     .reasons_for_working-chart
-      background: image-url('4/reasons_for_working-chart.gif') left top no-repeat
+      background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/4/reasons_for_working-chart.gif') left top no-repeat
       margin: 0 0 0 -37px
       width: 837px
       height: 365px
