--- a/css/sass/_chapter5.sass
+++ b/css/sass/_chapter5.sass
@@ -26,7 +26,7 @@
   .share_options,
   .ask_details
     @include clearfix
-    background: image-url('form-background.jpg') center bottom  repeat-x
+    background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/form-background.jpg') center bottom  repeat-x
 
   .share_options
     ul
@@ -90,13 +90,13 @@
             opacity: 1
 
           &.twitter
-            background-image: image-url('button-twitter.png')
+            background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/button-twitter.png')
 
           &.facebook
-            background-image: image-url('button-facebook.png')
+            background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/button-facebook.png')
 
           &.email
-            background-image: image-url('button-email.png')
+            background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/button-email.png')
 
       .icon
         width: 160px
@@ -164,13 +164,13 @@
       margin: .5em 0 1.5em
 
     .first_step
-      background-image: image-url('5/1.gif')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/5/1.gif')
       background-position: left 30px
 
     .second_step
-      background-image: image-url('5/2.gif')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/5/2.gif')
       background-position: left 12px
 
     .third_step
-      background-image: image-url('5/3.gif')
+      background-image: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/5/3.gif')
       background-position: left 25px
