--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -27,7 +27,7 @@ header.site_header
     max-width: 1000px
 
   a.pbs
-    background: image-url('pbs-logo-dark.png') no-repeat left top
+    background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/pbs-logo-dark.png') no-repeat left top
     background-size: contain
     margin: .2em 1em 0 0
     width: 38px
@@ -108,7 +108,7 @@ header.story_header
     z-index: 3
 
   p
-    background: image-url('pbs-logo-white.png') top no-repeat
+    background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/pbs-logo-white.png') top no-repeat
     color: #fff
     margin-bottom: $line*1.25
     padding-top: 55px
