--- a/css/sass/_chapter3.sass
+++ b/css/sass/_chapter3.sass
@@ -33,7 +33,7 @@
       text-align: center
 
     .financially_unprepared-chart
-      background: image-url('3/financially_unprepared-chart.gif') left top no-repeat
+      background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/3/financially_unprepared-chart.gif') left top no-repeat
       margin: 5em 0 2em -50px
       width: 850px
       height: 310px
@@ -96,7 +96,7 @@
 
     .years
       @include clearfix
-      background: image-url('line-background.png') center top repeat-y
+      background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/line-background.png') center top repeat-y
       margin: 0 auto
       width: $desktop
 
@@ -130,7 +130,7 @@
       @include clearfix
       @extend .border-top
       @extend .border-bottom
-      background: rgba(255, 255, 255, .8) image-url('line-background.png') center top repeat-y
+      background: rgba(255, 255, 255, .8) image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/line-background.png') center top repeat-y
       max-width: 100%
       margin: 250px 0 0
       padding: 3em 0
@@ -332,7 +332,7 @@
       margin-top: 0
 
     .investor_underperforms-chart
-      background: image-url('3/investor_underperforms-chart.gif') left top no-repeat
+      background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/3/investor_underperforms-chart.gif') left top no-repeat
       margin: 0 0 0 -62px
       width: 860px
       height: 404px
