--- a/css/sass/_footer.sass
+++ b/css/sass/_footer.sass
@@ -24,11 +24,11 @@ footer
         height: 145px
 
         &.previous
-          background: image-url('chapter-previous.svg') left no-repeat
+          background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/chapter-previous.svg') left no-repeat
           float: left
 
         &.next
-          background: image-url('chapter-next.svg') right no-repeat
+          background: image-url('http://www-tc.pbs.org/newshour/new-older-workers/img/chapter-next.svg') right no-repeat
           float: right
 
         a
